Adding full documentation api needed
