# internal/models/customer.go
@@ -1,0 +1,20 @@
+package models
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
+
+type Customer struct {
+	ID        uuid.UUID  `json:"id"`
+	StoreID   uuid.UUID  `json:"m_store_id"`
+	Name      string     `json:"name"`
+	Phone     string     `json:"phone"`
+	CreatedAt time.Time  `json:"created_at"`
+	CreatedBy uuid.UUID  `json:"created_by"`
+	UpdatedAt *time.Time `json:"updated_at,omitempty"`
+	UpdatedBy *uuid.UUID `json:"updated_by,omitempty"`
+	DeletedAt *time.Time `json:"deleted_at,omitempty"`
+	DeletedBy *uuid.UUID `json:"deleted_by,omitempty"`
+}
